[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../database-lib" }
dto = { path = "../dto-lib" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

once_cell = "1.21.3"
lazy_static = "1.4"

moka = { version = "0.12", features = ["future"] }
urlencoding = "2.1"

reqwest = { version = "0.12.20", features = ["json"] }

chrono = "0.4.41"
dotenvy = "0.15.7"
base64 = "0.22"
sha2 = "0.10"
utoipa = { version = "5.4.0", features = ["macros", "axum_extras", "chrono"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-redoc = { version = "6.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
